--- a/frontend/src/app/features/dashboard/components/voice-test/voice-test.html
+++ b/frontend/src/app/features/dashboard/components/voice-test/voice-test.html
@@ -75,9 +75,7 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <div
-          class="flex h-24 w-full items-center justify-center rounded-lg bg-gray-100"
-        >
+        <div class="flex h-24 w-full rounded-lg bg-gray-100">
           <canvas #audioVisualizer class="h-full w-full"></canvas>
         </div>
 
